# bag-of-visual-words

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
api/: html_writer.cpp  html_writer.hpp  image_browser.cpp  image_browser.hpp
core/: CMakeLists.txt  bow_dictionary.cpp  bow_dictionary.hpp  convert_dataset.cpp  convert_dataset.hpp  histogram.cpp  histogram.hpp  metrics.cpp  metrics.hpp
docker/: Dockerfile
interface/: CMakeLists.txt  bovw.h
scripts/release/: README.md  make_release.py  make_release.sh  upload_artifacts.sh
setup/: dictionary.yml
setup/histograms/: imageCompressedCam0_0000000.csv  imageCompressedCam0_0000010.csv  imageCompressedCam0_0000020.csv  imageCompressedCam0_0000030.csv  imageCompressedCam0_0000040.csv  imageCompressedCam0_0000050.csv  imageCompressedCam0_0000060.csv  imageCompressedCam0_0000070.csv  imageCompressedCam0_0000080.csv  imageCompressedCam0_0000090.csv  imageCompressedCam0_0000100.csv  imageCompressedCam0_0000110.csv  imageCompressedCam0_0000120.csv  imageCompressedCam0_0000130.csv  imageCompressedCam0_0000140.csv  imageCompressedCam0_0000150.csv  imageCompressedCam0_0000160.csv  imageCompressedCam0_0000170.csv  imageCompressedCam0_0000180.csv  imageCompressedCam0_0000190.csv  imageCompressedCam0_0000200.csv  imageCompressedCam0_0000210.csv  imageCompressedCam0_0000220.csv  imageCompressedCam0_0000230.csv  imageCompressedCam0_0000240.csv  imageCompressedCam0_0000250.csv  imageCompressedCam0_0000260.csv  imageCompressedCam0_0000270.csv  imageCompressedCam0_0000280.csv  imageCompressedCam0_0000290.csv  imageCompressedCam0_0000300.csv  imageCompressedCam0_0000310.csv  imageCompressedCam0_0000320.csv  imageCompressedCam0_0000330.csv  imageCompressedCam0_0000340.csv  imageCompressedCam0_0000350.csv  imageCompressedCam0_0000360.csv  imageCompressedCam0_0000370.csv  imageCompressedCam0_0000380.csv  imageCompressedCam0_0000390.csv  (+652 more)
setup/tfidf_histograms/: imageCompressedCam0_0000000.csv  imageCompressedCam0_0000010.csv  imageCompressedCam0_0000020.csv  imageCompressedCam0_0000030.csv  imageCompressedCam0_0000040.csv  imageCompressedCam0_0000050.csv  imageCompressedCam0_0000060.csv  imageCompressedCam0_0000070.csv  imageCompressedCam0_0000080.csv  imageCompressedCam0_0000090.csv  imageCompressedCam0_0000100.csv  imageCompressedCam0_0000110.csv  imageCompressedCam0_0000120.csv  imageCompressedCam0_0000130.csv  imageCompressedCam0_0000140.csv  imageCompressedCam0_0000150.csv  imageCompressedCam0_0000160.csv  imageCompressedCam0_0000170.csv  imageCompressedCam0_0000180.csv  imageCompressedCam0_0000190.csv  imageCompressedCam0_0000200.csv  imageCompressedCam0_0000210.csv  imageCompressedCam0_0000220.csv  imageCompressedCam0_0000230.csv  imageCompressedCam0_0000240.csv  imageCompressedCam0_0000250.csv  imageCompressedCam0_0000260.csv  imageCompressedCam0_0000270.csv  imageCompressedCam0_0000280.csv  imageCompressedCam0_0000290.csv  imageCompressedCam0_0000300.csv  imageCompressedCam0_0000310.csv  imageCompressedCam0_0000320.csv  imageCompressedCam0_0000330.csv  imageCompressedCam0_0000340.csv  imageCompressedCam0_0000350.csv  imageCompressedCam0_0000360.csv  imageCompressedCam0_0000370.csv  imageCompressedCam0_0000380.csv  imageCompressedCam0_0000390.csv  (+652 more)
src/: CMakeLists.txt  bovw_initializer.cpp  bovw_query.cpp  compute_dataset_dictionary.cpp  compute_dataset_features.cpp  compute_dataset_histogram.cpp  compute_image_histogram.cpp  main.cpp  query.cpp  reweight_dataset_histogram.cpp
